<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendCredentialFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_marginBottom="11dp"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/discover"
            style="@android:style/Widget.Material.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices" />

        <Button
            android:id="@+id/btnAliroBle"
            style="@android:style/Widget.Material.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/discover"
            android:layout_alignTop="@id/discover"
            android:layout_marginStart="8dp"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:text="Aliro BLE" />

        <ListView
            android:id="@+id/devices_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/discover"
            android:layout_above="@id/readerContainer"
            android:choiceMode="singleChoice" />

        <!-- Reader icon + status text, centered above the logo -->
        <LinearLayout
            android:id="@+id/readerContainer"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_above="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp">

            <!-- Status text: shown only when credential sent -->
            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="12dp"
                android:visibility="invisible" />

            <!-- Reader icon -->
            <ImageView
                android:id="@+id/readerIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_reader_idle"
                android:contentDescription="@string/elatec_GmbH" />

            <!-- Instruction text below reader: "Please present device to reader" -->
            <TextView
                android:id="@+id/centerInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_present_device_to_reader_to_unlock"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:layout_marginTop="12dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="?attr/isLightTheme"
            android:contentDescription="@string/elatec_GmbH"
            android:scaleType="fitEnd"
            app:srcCompat="@mipmap/psia_logo" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
